Suministros interfaz y arreglo detalles

--- a/WebContent/createPatient.html
+++ b/WebContent/createPatient.html
@@ -136,7 +136,7 @@
   					</div>
   				</div>
 				<div id="botonera">
-					<form action="estimations.html">
+					<form action="admission.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
 									<input type="submit"  class="button"  name="sbmtButton" value="Agregar" />
 						</div>	
