--- a/WebContent/editDepartment.html
+++ b/WebContent/editDepartment.html
@@ -19,7 +19,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="departments.html">Ver Departamentos</a></li>
-            		<li class="menuitem"><a href="createDepartment.html">Crear Departamento</a></li>
+            		<li class="menuitem"><a href="createDepartment.html" style="margin-left:10px;">Crear Departamento</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
