--- a/WebContent/estimations.html
+++ b/WebContent/estimations.html
@@ -109,7 +109,7 @@
 										<td>Histerectomía</td>
 										<td>17/06/2013</td>
 										<td>
-											<a href="showEstimation.html" style="color: transparent" >
+											<a href="showEstimation.html?function=estimations" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 											</a>
 											<a href="printEstimation.html" style="color: transparent" >
