--- a/WebContent/showEstimation.html
+++ b/WebContent/showEstimation.html
@@ -32,6 +32,30 @@
 			return true;
 		}
 		</script>
+			<script type="text/javascript">
+		$(document).ready(function() {
+			
+			function getUrlVars() {
+			    var vars = {};
+			    var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+			        vars[key] = value;
+			    });
+			    return vars;
+			}
+
+			var first = getUrlVars()["function"];
+			if (first != null){
+				first = first.replace(/\+/g, ' ');
+				if (first.indexOf("Admission") > 0){
+					$("#admission").attr('class', 'active');
+				}
+				else if (first.indexOf("stimations") > 0){
+					$("#estimation").attr('class', 'active');
+				}
+			}
+		});
+		
+		</script>
 	</head>
 	<body>
 		<div id="container">
@@ -49,17 +73,17 @@
 				<div id="leftmenu_top"></div>
 				<div id="leftmenu_main">
 					<ul>
-					    <li><a class="active" href="estimations.html">Presupuestos</a></li>
-					    <li><a href="emergencies.html">Emergencia</a></li>
-						<li><a href="admission.html">Admisión</a></li>
-					    <li><a href="hospitalization.html">Hospitalización</a></li>
+					    <li><a id="estimation"  href="estimations.html">Presupuestos</a></li>
+					    <li><a id="emergencies" href="emergencies.html">Emergencia</a></li>
+						<li><a id="admission" href="admission.html">Admisión</a></li>
+					    <li><a id="hospitalization" href="hospitalization.html">Hospitalización</a></li>
 						<li><a href="protocols.html">Protocolos</a></li>
 						<li><a href="services.html">Servicios</a></li>
-						<li><a href="supplyAreas.html">Suministros</a></li>
+						<li><a id="supplyAreas" href="supplyAreas.html">Suministros</a></li>
 						<li><a href="departments.html">Departamentos</a></li>
 						<li><a href="doctors.html">Doctores</a></li>
-						<li><a  href="bank.html">Cajas y Bancos</a></li>
-						<li><a href="accounts.html">Cuentas</a></li>
+						<li><a id="bank" href="bank.html">Cajas y Bancos</a></li>
+						<li><a id="accounts" href="accounts.html">Cuentas</a></li>
 					</ul>
 				</div>
 	            <div id="leftmenu_bottom"></div>
@@ -120,16 +144,19 @@
 						<br>
 					</div>
 				</div>
-				<div id="botonera">
+				<div id="botonera" style="width: 300px;">
 					<form action="printEstimation.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
 									<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" />
 						</div>	
-						<div id="botonV" style="display: inline;">
+						<div id="botonV" style="display: inline; margin-right: 30px;">
 								<a id="go" rel="leanModal" href="#refreshUser" style="color: #f7941e; font-weight: bold;" 
 											onclick="return loadVars(1003,'1003');" >
 								<input type="button" class="button" value="Actualizar"  />			
 								</a>
+						</div>	
+						<div id="botonR" style="display: inline;">
+								<input type="button" class="button" value="Regresar" onClick="javascript:history.back();" />		
 						</div>	
 					</form>
 				</div><br>
