maqueta html doctor detalles finales

--- a/WebContent/doctors.html
+++ b/WebContent/doctors.html
@@ -104,7 +104,7 @@
 										<td>1001</td>
 										<td>Ricardo</td>
 										<td>López</td>
-										<td>Cirugía General, Oncología, Ginecología</td>
+										<td>Cirugía General, Oncología Médica, Ginecología Clínica</td>
 										<td>
 											<a href="editDoctor.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
