detalle al cerrar las vent. emergentes

--- a/WebContent/bank.html
+++ b/WebContent/bank.html
@@ -171,7 +171,7 @@
 					<a class="close_x" id="close_x_aux"  href="#"></a>
 				</div>
 				
-				<form action="admission.html" method="post"  onsubmit="return setV(this)">
+				<form action="bank.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpAux"  name="sbmtButton" value="Aceptar"  />
@@ -203,7 +203,7 @@
 				<div id="signup-header">
 					<a class="close_x" id="close_x_aux"  href="#"></a>
 				</div>
-				<form action="admission.html" method="post"  onsubmit="return setV(this)">
+				<form action="bank.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpAux"  name="sbmtButton" value="Aceptar"  />
