--- a/WebContent/showCashBox.html
+++ b/WebContent/showCashBox.html
@@ -58,7 +58,7 @@
 			    <br><br>
 			    </p>
 				<div id="botonera" >
-					<form action="printCashBank.html">
+					<form action="printCashBox.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
 							<input type="submit"  class="button"  name="sbmtButton" value="Imprimir" />
 						</div>	
