--- a/WebContent/accounts.html
+++ b/WebContent/accounts.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html>
 	<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Cuentas</title>
-	<script type="text/javascript" src="./js/jquery.js"></script>
-	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
-	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
-	<script type="text/javascript" charset="utf-8">
-	$(document).ready(function() {
-		$('#example').dataTable( {
-			"iDisplayLength": 7,
+		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
+		<title>Cuentas por Cobrar y Pagar</title>
+		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
+	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+		<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
+		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
+		<link rel="stylesheet" href="/resources/demos/style.css" />
+		<script type="text/javascript" charset="utf-8">
+		$(document).ready(function() {
+			$('#example').dataTable( {
+			"iDisplayLength": 5,
 			"bLengthChange": false,
-			"sScrollY": "250px",
+			"sScrollY": "200px",
 			"bPaginate": false,
 			"aoColumns": [
 				null,
@@ -22,69 +25,266 @@
 				{ "bSearchable": false, "asSorting": false, "sWidth": "18%" }
 			],
 			"oLanguage": {
-	            "sLengthMenu": "Mostrar _MENU_ registros",
+	            "sLengthMenu": " ",
 	            "sZeroRecords": "No hay ningún registro que coincida con su búsqueda",
-	            "sInfo": "Mostrando _START_ a _END_ de _TOTAL_ registros",
-	            "sInfoEmpty": "Mostrando 0 a 0 de 0 registros",
-	            "sInfoFiltered": "(filtrando de _MAX_ registros totales)",
+	            "sInfo": " ",
+	            "sInfoEmpty": " ",
+	            "sInfoFiltered": " ",
 	            "sEmptyTable": "No hay datos disponibles en la tabla",
 	            "sLoadingRecords": "Por favor, espere - cargando...",
 	            "sSearch": "Buscar:"
         	}
 		} );
-	} );
-	</script>
-	<script type="text/javascript">
-	var idUser;
 			
-	$(function() {
-		$('a[rel*=leanModal]').leanModal({ top : 200, closeButton: ".close_x" });		
-	});
-	
-	function loadVars(var1, var2) {
-		idUser = var1;
-		$('.cliente').text(var2);
+			$('#example2').dataTable( {
+				"iDisplayLength": 5,
+				"bLengthChange": false,
+				"sScrollY": "200px",
+				"bPaginate": false,
+				"aoColumns": [
+					null,
+					null,
+					null,
+					null,
+					{ "bSearchable": false, "asSorting": false, "sWidth": "18%" }
+				],
+				"oLanguage": {
+		            "sLengthMenu": " ",
+		            "sZeroRecords": "No hay ningún registro que coincida con su búsqueda",
+		            "sInfo": " ",
+		            "sInfoEmpty": " ",
+		            "sInfoFiltered": " ",
+		            "sEmptyTable": "No hay datos disponibles en la tabla",
+		            "sLoadingRecords": "Por favor, espere - cargando...",
+		            "sSearch": "Buscar:"
+	        	}
+			} );
+			
+	} );
 		
-	};
-	
-	function setV(f){
-		f.elements['userId'].value = idUser;
-		return true;
-	}
 	</script>
-</head>
-<body>
-	<div id="container">
-		<div id="header">
-        	<img alt="logo" src="./images/logo.png"/>
-        </div>         
-        <div id="menu">
-			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
-	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
-        </div>        
-		<div id="leftmenu">
-			<div id="leftmenu_top"></div>
-			<div id="leftmenu_main">
-				<ul>
-				    <li><a href="estimations.html">Presupuestos</a></li>
-				    <li><a href="emergencies.html">Emergencia</a></li>
-					<li><a href="admission.html">Admisión</a></li>
-				    <li><a href="hospitalization.html">Hospitalización</a></li>
-					<li><a href="protocols.html">Protocolos</a></li>
-					<li><a href="services.html">Servicios</a></li>
-					<li><a href="supplyAreas.html">Suministros</a></li>
-					<li><a href="departments.html">Departamentos</a></li>
-					<li><a href="doctors.html">Doctores</a></li>
-					<li><a href="bank.html">Cajas y Bancos</a></li>
-					<li><a class="active" href="accounts.html">Cuentas</a></li>   
-				</ul>
-			</div>
-            <div id="leftmenu_bottom"></div>
-        </div>  
-		<div id="content">  
-			 AQUI VAN LAS CUENTAS
-       	</div>
-       </div>
+		<script type="text/javascript">
+		var idUser;
+
+		$(function() {
+			$('a[rel*=leanModal]').leanModal({ top : 200, closeButton: ".close_x, .buttonPopUpClose" });		
+		});
+
+		function loadVars(var1, var2) {
+			idUser = var1;
+			$('.cliente').text(var2);
+
+		};
+
+		function setV(f){
+			f.elements['userId'].value = idUser;
+			return true;
+		}
+		</script>
+		<script>
+			$(function() {
+				$("#tabs").tabs();
+				$("#tabs").tabs("select", window.location.hash);
+			});
+		</script>
 		
+	</head>
+	<body>
+		<div id="container">
+			<div id="header">
+	        	<img alt="logo" src="./images/logo.png"/>
+	        </div>         
+        	<div id="menu">
+				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+		    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
+        	</div>        
+			<div id="leftmenu">
+				<div id="leftmenu_top"></div>
+				<div id="leftmenu_main">
+					<ul>
+					    <li><a href="estimations.html">Presupuestos</a></li>
+					    <li><a href="emergencies.html">Emergencia</a></li>
+						<li><a href="admission.html">Admisión</a></li>
+					    <li><a href="hospitalization.html">Hospitalización</a></li>
+						<li><a href="protocols.html">Protocolos</a></li>
+						<li><a href="services.html">Servicios</a></li>
+						<li><a href="supplyAreas.html">Suministros</a></li>
+						<li><a href="departments.html">Departamentos</a></li>
+						<li><a href="doctors.html">Doctores</a></li>
+						<li><a href="bank.html">Cajas y Bancos</a></li>
+						<li><a  class="active" href="accounts.html">Cuentas</a></li>
+					</ul>
+				</div>
+	            <div id="leftmenu_bottom"></div>
+	        </div>
+        	<div id="content" style="position:absolute;">	
+	        	<h2>Cuentas:</h2><br>
+	        	<br>
+				<div id="tabs">
+					<ul>
+					    <li><a href="#tabs-1">Por Cobrar</a></li>
+					    <li><a href="#tabs-2">Por Pagar</a></li>
+					</ul>
+  					<div id="tabs-1">
+  						<div style="text-align:right; margin-top: 5px; margin-bottom:20px;">
+	  						<a href="searchProtocols.html?function=editEstimation" style="color: #006c92; font-weight: bold;">
+								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Cuenta por Cobrar
+							</a>						
+  						</div>
+ 								<div id="demo">
+								<table class="display" id="example">
+									<thead>
+										<tr>
+											<th>ID</th>
+											<th>Empresa</th>
+											<th>Monto</th>
+											<th>Fecha Vencimiento</th>
+											<th>Acciones</th>
+										</tr>
+									</thead>
+									<tbody>			
+										<tr class="gradeA">
+											<td>1001</td>
+											<td>Vidamed</td>
+											<td>Bs. 15000</td>
+											<td>20-08-2013</td>
+											<td>
+												<a href="editHospitalization.html" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												</a>
+												<a href="showAdmission.html" style="color: transparent" >
+													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+												</a>
+												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Ana Rojas');" >
+													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<br>
+											</td>
+										</tr>
+										<tr class="gradeA">
+											<td>1002</td>
+											<td>La Previsora</td>
+											<td>Bs. 5000</td>
+											<td>25-11-2013</td>
+											<td>
+												<a href="editHospitalization.html" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												</a>
+												<a href="#" style="color: transparent" >
+													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+												</a>
+												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Ana Rojas');" >
+													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<br>
+											</td>
+										</tr>
+										<tr class="gradeA">
+											<td>1003</td>
+											<td>Multinacional de Seguros</td>
+											<td>Bs. 34500</td>
+											<td>17-10-2013</td>
+											<td>
+												<a href="editHospitalization.html" style="color: transparent" >
+													<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												</a>
+												<a href="#" style="color: transparent" >
+													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+												</a>
+												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Ana Rojas');" >
+													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<br>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					<div id="tabs-2">
+  						<div style="text-align:right; margin-top: 5px; margin-bottom:20px;">
+	  						<a href="searchProtocols.html?function=editEstimation" style="color: #006c92; font-weight: bold;">
+								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Cuenta por Pagar
+							</a>						
+  						</div>
+  								<div id="demo">
+								<table class="display" id="example2">
+									<thead>
+										<tr>
+											<th>ID</th>
+											<th>Empresa</th>
+											<th>Monto</th>
+											<th>Fecha Vencimiento</th>
+											<th>Acciones</th>
+										</tr>
+									</thead>
+									<tbody>			
+										<tr class="gradeA">
+											<td>1001</td>
+											<td>Hospital Online</td>
+											<td>Bs. 15000</td>
+											<td>20-09-2013</td>
+											<td>
+												<a href="editHospitalization.html" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												</a>
+												<a href="showAdmission.html" style="color: transparent" >
+													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+												</a>
+												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Ana Rojas');" >
+													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<br>
+											</td>
+										</tr>
+										<tr class="gradeA">
+											<td>1002</td>
+											<td>Multinacional de Seguros</td>
+											<td>Bs. 5000</td>
+											<td>25-11-2013</td>
+											<td>
+												<a href="editHospitalization.html" style="color: transparent" >
+												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												</a>
+												<a href="#" style="color: transparent" >
+													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+												</a>
+												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Ana Rojas');" >
+													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<br>
+											</td>
+										</tr>
+										<tr class="gradeA">
+											<td>1003</td>
+											<td>Vidamed</td>
+											<td>Bs. 34500</td>
+											<td>17-10-2013</td>
+											<td>
+												<a href="editHospitalization.html" style="color: transparent" >
+													<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+												</a>
+												<a href="#" style="color: transparent" >
+													<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+												</a>
+												<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
+													onclick="return loadVars(1001,'Ana Rojas');" >
+													<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
+												</a> 
+												<br>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+					</div>
+  				</div>
+			</div>
+		</div>
 	</body>
 </html>
