--- a/WebContent/accounts.html
+++ b/WebContent/accounts.html
@@ -127,7 +127,7 @@
 					</ul>
   					<div id="tabs-1">
   						<div style="text-align:right; margin-top: 5px; margin-bottom:20px;">
-	  						<a href="searchProtocols.html?function=editEstimation" style="color: #006c92; font-weight: bold;">
+	  						<a href="createReceivable.html" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Cuenta por Cobrar
 							</a>						
   						</div>
@@ -206,7 +206,7 @@
 						</div>
 					<div id="tabs-2">
   						<div style="text-align:right; margin-top: 5px; margin-bottom:20px;">
-	  						<a href="searchProtocols.html?function=editEstimation" style="color: #006c92; font-weight: bold;">
+	  						<a href="createAccountPayable.html" style="color: #006c92; font-weight: bold;">
 								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Cuenta por Pagar
 							</a>						
   						</div>
